<resources>
    <string name="app_name">SaveLives</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="donate_blood">Donate Blood</string>
    <string name="save_life">Save Life</string>
    <string name="donate">Donate</string>
    <string name="blood">Blood</string>
    <string name="next">  Next  </string>
    <string name="start_journey">Start Journey</string>
    <string name="lorum_ipsum_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industrys standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book. </string>

    //Sign in, Sign up screen strings
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>


    <string name="rakibhasan1030">rakibhasan1030@gmail.com</string>


    //sign up fragments strings

    //basic
    <string name="let_us_know_about_you">Let Us Know</string>
    <string name="about_you">About You</string>
    <string name="userName">Username</string>
    <string name="basic_bottom_description">Provide your real name for your identity.
        Your name will be used for search.</string>

    //contact
    <string name="contact">Contact</string>
    <string name="information">Information</string>
    <string name="phone_no">Phone No</string>
    <string name="alt_phone_no">Alternative Phone No</string>
    <string name="social">Social(Optional)</string>
    <string name="phone_no_hint_gp">+88 017</string>
    <string name="phone_no_hint_robi">+88 018</string>
    <string name="social_hint">https://</string>
    <string name="contact_bottom_description">Please provide correct phone number. This information will keep safe.</string>

    //blood group
    <string name="what_is_your">What is Your</string>
    <string name="blood_group">Blood Group?</string>
    <string name="a_plus">A+</string>
    <string name="a_minus">A-</string>
    <string name="b_plus">B+</string>
    <string name="b_minus">B-</string>
    <string name="ab_plus">AB+</string>
    <string name="ab_minus">AB-</string>
    <string name="o_plus">O+</string>
    <string name="o_minus">O-</string>
    <string name="blood_group_bottom_description">Your blood group need to be accurate. if you do not know about it, please contact nearest clinic.</string>

    //weight
    <string name="how_much_do">How Much Do</string>
    <string name="you_weight">You Weight?</string>
    <string name="greater_than_50"> &gt; 50</string>
    <string name="less_than_50"> &lt; 50</string>
    <string name="weight_bottom_description">Note: You can not donate blood, if you are under weight. Minimum weight for donation required <b>50KG</b></string>

    //gender
    <string name="what_is">What is</string>
    <string name="your_geder">Your Gender?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender_bottom_description">Defining your gender will let us know brings new features for mothers health care.</string>

    //address
    <string name="where_do">Where Do</string>
    <string name="you_live">You Live?</string>
    <string name="street_address">Street Address</string>
    <string name="street_address_hint">123/4, Saint Road</string>
    <string name="city">City</string>
    <string name="city_hint">Dhaka</string>
    <string name="postal_code">Postal Code</string>
    <string name="postal_code_hint">1207</string>
    <string name="address_bottom_description">Please provide correct address. This information will keep safe.</string>

    //age
    <string name="how_old">How Old</string>
    <string name="are_you">Are You?</string>
    <string name="i_am">I am</string>
    <string name="years_old">Years Old</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="number_picker_formatter">%02d</string>
    <string name="age_bottom_description">Correct birthdate give you best experience with the community. Do not hide it.</string>

    //userImage
    <string name="you_are">You Are</string>
    <string name="almost_done">Almost Done</string>
    <string name="user_image_bottom_description">Please, Do not use models or doll avatar. Please, Keep faith on yourself you are beautiful too.</string>


    //home fragment
    <string name="campaign">Campaign</string>
    <string name="available_at_3_day">Available at 3 day</string>
    <string name="available">Available</string>
    <string name="menu">Menu</string>
    <string name="requests">Requests</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>

    //Notification fragment
    <string name="notifications">Notifications</string>
    <string name="notification">Notification</string>
    <string name="musa_clinic">Musa Clinic</string>
    <string name="blood_request_notification_text_posted"><b>Musa Clinic</b> Posted a blood <br>request near you</br></string>
    <string name="blood_request_notification_text_requested">requested you for<br> O+ blood</br></string>
    <string name="blood_request_notification_text_earned">earned a new badge</string>

    //map fragment
    <string name="search">Search</string>


    //Profile fragment
    <string name="my_profile">My Profile</string>
    <string name="user_name">Ashu Priya</string>
    <string name="donation_level">Beginner Donor</string>
    <string name="a_positive">A+</string>
    <string name="info">Info</string>
    <string name="donation">Donation</string>
    <string name="badges">Badges</string>
    <string name="badge">Badge</string>
    <string name="three">3</string>
    <string name="seven">7</string>
    <string name="dec">Dec</string>
    <string name="days_until_you_can_donate_again">days until you can donate again</string>
    <string name="saint">Saint Sebastaine <br> Hospital </br> </string>
    <string name="one_bag_blood">1 Bag Blood</string>
    <string name="six_day_ago">6 day ago</string>
    <string name="life_saver">Life Saver</string>
    <string name="fast">Fast</string>
    <string name="certified">Certified</string>
    <string name="clean">Clean</string>
    <string name="protector">Protector</string>
    <string name="fifty_lives">50 Lives</string>
    <string name="superman">Superman</string>


    <string name="toast_info">Please, fill all info!</string>


    <string name="blood_donation_campaign">Blood Donation Campaign 2021 Held on Today</string>
    <string name="by_admin">by Admin</string>
    <string name="one_min_ago">1 min ago</string>


    <string name="lorum_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="title_activity_home_menu_container">HomeMenuContainerActivity</string>


    //post a request menu
    <string name="post_a_request">Post A Request</string>
    <string name="blood_request">Blood Request</string>
    <string name="area_or_city">Area or City</string>
    <string name="new_york">New York</string>
    <string name="i_am_his_or_her">I am his/her</string>
    <string name="brother">Brother</string>
    <string name="publish">Publish</string>
    <string name="urgent">Urgent</string>
    <string name="schedule_underline"><u>Schedule</u></string>
    <string name="scheduled">Scheduled</string>

    //Urgent and my request menu
    <string name="my_request">My Request</string>
    <string name="sort_by">Sort By</string>
    <string name="emergency">Emergency</string>
    <string name="managed">Managed</string>
    <string name="expired">Expired</string>
    <string name="edit">Edit</string>
    <string name="at">at</string>
    <string name="donation_time">Sun 11.30 PM</string>
    <string name="notification_time">1 min ago</string>
    <string name="jarin_hospital">Jarin Hospital</string>
    <string name="three_km">3km</string>
    <string name="hospital_address">21/3, Los Angeles, CA</string>
    <string name="johnadam">johnadam</string>
    <string name="urgent_requests">Urgent Requests</string>


    //Donation menu
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="date_and_time">Monday, 2 Jan, 11:08 PM</string>
    <string name="you_have_saved">You have save 5 lives, donated 50 unit</string>
    <string name="kings_land_hospital">Kingsland Hospital</string>
    <string name="times">Times</string>
    <string name="history">History</string>
    <string name="reviews">Reviews</string>
    <string name="reply">Reply</string>
    <string name="like">Like</string>
    <string name="ashiq">Ashiq Prottoy</string>
    <string name="dec_twenty_seven">Dec 27</string>






</resources>