<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signin_or_signup_screens.sign_up_fragments.SignUpBloodGroupInfoFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/blood_logo_iv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/blood_donation_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/what_is_your"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blood_logo_iv" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/blood_group"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/blood_group_bottom_description"
            app:layout_constraintBottom_toTopOf="@+id/blood_group_info_fragment_next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.example.savelives.signin_or_signup_screens.sign_up_fragments.ToggleButtonGroupTableLayout
                android:id="@+id/blood_group_info_fragment_toggle_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:weightSum="3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_weight="1"
                    android:weightSum="3">

                    <RadioButton
                        android:id="@+id/a_plus_RB"
                        android:text="@string/a_plus"
                        android:button="@null"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/toggle_button_text_color_blood_group"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:background="@drawable/radio_button_selector"/>

                    <RadioButton
                        android:id="@+id/a_minus_RB"
                        android:text="@string/a_minus"
                        android:button="@null"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/toggle_button_text_color_blood_group"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:background="@drawable/radio_button_selector"/>

                    <RadioButton
                        android:id="@+id/b_plus_RB"
                        android:text="@string/b_plus"
                        android:button="@null"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/toggle_button_text_color_blood_group"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:background="@drawable/radio_button_selector" />

                </TableRow>

                <TableRow
                    android:layout_weight="1"
                    android:weightSum="3">

                    <RadioButton
                        android:id="@+id/b_minus_RB"
                        android:text="@string/b_minus"
                        android:button="@null"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/toggle_button_text_color_blood_group"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:background="@drawable/radio_button_selector"/>

                    <RadioButton
                        android:id="@+id/o_plus_RB"
                        android:text="@string/o_plus"
                        android:button="@null"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/toggle_button_text_color_blood_group"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:background="@drawable/radio_button_selector"/>

                    <RadioButton
                        android:id="@+id/o_minus_RB"
                        android:text="@string/o_minus"
                        android:button="@null"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/toggle_button_text_color_blood_group"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:background="@drawable/radio_button_selector" />

                </TableRow>

                <TableRow
                    android:layout_weight="1"
                    android:weightSum="3">

                    <RadioButton
                        android:id="@+id/ab_plus_RB"
                        android:text="@string/ab_plus"
                        android:button="@null"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/toggle_button_text_color_blood_group"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:background="@drawable/radio_button_selector" />

                    <RadioButton
                        android:id="@+id/ab_minus_RB"
                        android:text="@string/ab_minus"
                        android:button="@null"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/toggle_button_text_color_blood_group"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:background="@drawable/radio_button_selector"/>

                    <RadioButton
                        android:id="@+id/invisible_RB"
                        android:button="@null"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"/>

                </TableRow>

            </com.example.savelives.signin_or_signup_screens.sign_up_fragments.ToggleButtonGroupTableLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/blood_group_info_fragment_next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/ss_rounded_corner_rectangle_button_bg_red"
            android:elevation="25dp"
            android:padding="9dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>