<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/red_circle_bg_ib"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ss_rounded_corner_rectangle_button_bg_red"
        android:gravity="center"
        android:src="@drawable/share_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/history_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/red_circle_bg_ib"
        app:layout_constraintEnd_toEndOf="@+id/red_circle_bg_ib"
        app:layout_constraintStart_toStartOf="@+id/red_circle_bg_ib"
        app:layout_constraintTop_toTopOf="@+id/red_circle_bg_ib" />

    <TextView
        android:id="@+id/history_hospital_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/kings_land_hospital"
        android:textColor="@color/gray"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/red_circle_bg_ib"
        app:layout_constraintStart_toEndOf="@+id/red_circle_bg_ib"
        app:layout_constraintTop_toTopOf="@+id/red_circle_bg_ib" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/times"
        android:textColor="@color/gray"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/history_number_of_blood_donation_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/history_number_of_blood_donation_tv" />

    <TextView
        android:id="@+id/history_number_of_blood_donation_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/two"
        android:textColor="@color/gray"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/history_hospital_name_tv"
        app:layout_constraintEnd_toStartOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="@+id/history_hospital_name_tv" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/light_gray_shadow"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="@+id/red_circle_bg_ib"
        app:layout_constraintTop_toBottomOf="@+id/red_circle_bg_ib" />


</androidx.constraintlayout.widget.ConstraintLayout>